# empirica

./: -  .agent_memory.json  .cursorrules  .doppler.yaml  .env.example  .gitignore  .session-handoff.md  .vibeignore  AGENTS.md  AGENT_WORK_COMPLETE_SUMMARY.md  ANTIGRAVITY_MCP_FIX.md  BOOTSTRAP_AND_DEPRECATED_REMOVAL_COMPLETE.md  BOOTSTRAP_CHECK.md  BOOTSTRAP_ONLY_REMOVAL.md  BOOTSTRAP_REFACTOR_PLAN.md  BOOTSTRAP_SIMPLIFICATION_COMPLETE.md  BREAKING_CHANGE_ANALYSIS.md  BROWSER_EXTENSION_ARCHITECTURE.md  CASCADE_GIT_TESTS_FIXED.md  CHANGELOG.md  CHECKPOINT_CRYPTO_SIGNING_COMPLETE.md  CHECKPOINT_FIX_COMPLETE.md  CHECKPOINT_SESSION3_PROGRESS.md  CHECKPOINT_SESSION4_SECTION1_COMPLETE.md  CHECKPOINT_SESSION5_P1_COMPLETE.md  CHECKPOINT_SESSION_2024_11_14_COMPLETE.md  CLAUDE.md  CLI_JSON_DB_FIX_COMPLETE.md  CLI_TESTING_STRUCTURE.md  CLI_UX_IMPROVEMENTS.md  CODE_DEDUPLICATION_ANALYSIS.md  CODE_HARDENING_DEDUPLICATION_COMPLETE.md  CODE_REFACTORING_PLAN.md  COGNITIVE_VAULT_INTEGRATION_SPEC.md  COMMAND_AUDIT_ANALYSIS.md  COMPLETE_DOCS_MIGRATION_SUMMARY.md  COMPLETE_FIX_SUMMARY.md  COMPLETE_RELEASE_PREPARATION_SUMMARY.md  COMPLETE_SESSION_FINAL.md  COMPREHENSIVE_TESTING_GUIDE.md  (+204 more)
.beads/: issues.jsonl
.claude/: settings.json
.empirica-project/: PROJECT_CONFIG.yaml  README.md
.github/: .copilot-instructions.md.kate-swp  copilot-instructions.md  copilot-instructions_back.md
.qdrant_data/: meta.json
SESSION_ARCHIVE_2025_12_04/: ADDING_OUTPUT_JSON.md  ARCHITECTURE_CLARIFICATION.md  AUTO_TRACKER_ANALYSIS.md  BOOTSTRAP_INHERITANCE_ANALYSIS.md  CASCADE_SIMPLIFICATION_ANALYSIS.md  CLEANUP_SUMMARY.md  CRITICAL_FIXES_COMPLETE.md  CRITICAL_FIX_REQUIRED.md  DEEP_INTEGRATION_ANALYSIS.md  DUAL_LOGGER_FIX_COMPLETE.md  E2E_ISSUES_FOUND.md  EMPIRICA_TESTING_SUMMARY.md  FINAL_STATUS.md  FINDINGS_SUMMARY.md  FIXING_CRITICAL_ISSUES.md  FIX_STORAGE_FLOW.md  HANDOFF_CRITICAL_FIX.md  INHERITANCE_ANALYSIS.md  INHERITANCE_REMOVAL_COMPLETE.md  OUTPUT_JSON_COMPLETE.md  OUTPUT_JSON_FINAL_STATUS.md  README.md  REFLEX_LOGGER_ANALYSIS.md  REMOVE_INHERITANCE_LOG.md  SESSION_SUMMARY_COMPLETE.md  SIMPLIFICATION_ACTION_PLAN.md  SIMPLIFICATION_PLAN.md  SIMPLIFICATION_SESSION_SUMMARY.md  STORAGE_FLOW_FIX_COMPLETE.md  TEAM_ASSIGNMENT_STRATEGY.md  auto_tracker.py.REMOVED  extended_metacognitive_bootstrap.py.OLD  optimal_metacognitive_bootstrap.py.OLD
_archive_for_review/: README_FOR_CLAUDE_REVIEW.md
dev_scripts/: schema_validator.py  schema_validator_final.py
docs/: 01_START_HERE.md  01_a_AI_AGENT_START.md  01_b_MCP_AI_START.md  02_INSTALLATION.md  02_QUICKSTART_CLI.md  03_CLI_QUICKSTART.md  03_QUICKSTART_MCP.md  04_MCP_QUICKSTART.md  05_ARCHITECTURE.md  06_TROUBLESHOOTING.md  AI_VS_AGENT_EMPIRICA_PATTERNS.md  ALL_PLATFORMS_INSTALLATION.md  ALL_PLATFORMS_QUICK_REFERENCE.md  AUTO_ISSUE_CAPTURE.md  AUTO_ISSUE_CAPTURE_CAPABILITY.develop.md  CHECKPOINT_P1_CONTINUATION_ROUND48.md  COMPLETE_INSTALLATION_GUIDE.md  DASHBOARDS.md  DATABASE_REFACTORING_SUMMARY.md  DISTRIBUTION_STRATEGY.md  DOCS_CLEANUP_TODO.md  EMPIRICA_COMPLETE_OVERVIEW.md  EMPIRICA_INSTALLATION_GUIDE.md  EMPIRICA_MCP_CONFIG.json  EMPIRICA_NATURAL_LANGUAGE_GUIDE.md  EPISTEMIC_FACT_CHECKING_SPEC.md  EPISTEMIC_GROUNDING_PAPER.md  EPISTEMIC_LEARNING_SYSTEM.develop.md  EPISTEMIC_TESTING_PLAN.md  FEATURE_STATUS.md  INTEGRATION_GUIDE.md  MARKET_OPPORTUNITIES.md  MEETINGS_ADAPTER_DESIGN.md  ONBOARDING_GUIDE.md  PERPETUAL_CONTINUITY_BREAKTHROUGH.md  PHASE3_VALIDATION_DOCS_COMPLETE.md  PRIVACY_AGENT.md  PROJECT_SWITCHING_FOR_AIS.md  README.md  SECURITY_EPISTEMIC_VECTORS.md  (+7 more)
empirica/: __init__.py
empirica-chat/: 00_START_HERE.txt  ANTHROPIC_SUBMISSION_PACKAGE.md  EMPIRICA_SKILL_GUIDE.md  EMPIRICA_SYSTEM_PROMPT_INTEGRATION.md  MANIFEST.txt  PITCH_FOR_ANTHROPIC_SKILLS_TEAM.md  README.md  SUBMISSION_GUIDE.md  UPDATES_COMPLETE.md  empirica-demo-artifact.md  empirica-demo-visual.html  empirica-epistemic-framework.skill
empirica-epre/: DATA_FLOW_ARCHITECTURE.md  FAIRNESS_SPECIFICATION.md  SPECIFICATION.md  SPECIFICATION_V2_AI_NATIVE.md
empirica-mcp/: DEPLOYMENT.md  EPISTEMIC_DEMO.md  IMPLEMENTATION_COMPLETE.md  NOETIC_FILTER_ANALYSIS.md  NOETIC_FILTER_ENTERPRISE.md  QUICK_START.md  README.md  pyproject.toml
empirica.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
examples/: README.md  advanced_collaboration_example.py  advanced_uncertainty_example.py  cli_example.py  cli_example.sh  cli_interface_example.py  cli_usage_examples.sh  code_analysis_example.py  comprehensive_ai_development_example.py  comprehensive_workflow_example.py  context_validation_example.py  daily_development_example.py  harmonious_integration_example.py  programmatic_example.py  security_monitoring_example.py  test_all_examples.sh  tool_management_example.py
forgejo-plugin-empirica/: README.md  manifest.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
mcp_local/: code_guidance_mcp_server.py  empirica_mcp_server.py  start_empirica_mcp.sh
project_skills/: astro-web-dev.yaml  empirica-epistemic-framework.yaml  (+3 more)
(+1062 files in other folders)
